@@ -33,6 +33,7 @@ $ -> Language fix or change
 10-Feb-2010 Jean-Marie Simonet
 + Added strings for the featured tagging
 + Translated components admin submenus
+^ Refactored mod_banners ini/keys
 
 09-Feb-2010 Jean-Marie Simonet
 ^ Refactored mod_articles_archived ini/keys. Updated sql.
